--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ border-bottom: 2px solid #e0e0e0;
 	width: 90%;
 	height: 400px;
 	display: flex;
-	border-bottom: 2px solid #e0e0e0;
+/* 	border-bottom: 2px solid #e0e0e0; */
 }
 
 .fitur-besar2-gambar{
